Fix SonarQube Issues