@@ -3,7 +3,6 @@ package at.porscheinformatik.idp.openidconnect.convert;
 import java.util.Collection;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 import org.springframework.core.convert.converter.Converter;
 
 public class AdditionalLocalesConverter implements Converter<Object, List<Locale>> {
@@ -15,6 +14,6 @@ public class AdditionalLocalesConverter implements Converter<Object, List<Locale
         return languageTags //
             .stream()
             .map(Locale::forLanguageTag)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
